# dotfiles

./: .chezmoiignore  README.org  dot_bash_aliases  dot_bashrc  dot_bashrc.tmpl  dot_gitconfig  dot_mbsyncrc.tmpl  dot_vimrc
dot_doom.d/: README.org  config.el  email.el.tmpl  git-sync.el  init.el  meeting.css  org-db-v3.el  packages.el  personal.el.tmpl  utility.el
dot_doom.d/org-db-v3/python/: README.md  executable_run  pyproject.toml
dot_doom.d/org-db-v3/python/org_db_server/: __init__.py  config.py  log_handler.py  main.py  migrations.py
dot_doom.d/org-db-v3/python/org_db_server/api/: agenda.py  indexing.py  linked_files.py  search.py  stats.py
dot_doom.d/org-db-v3/python/org_db_server/models/: __init__.py  db_models.py  image_schema.py  schemas.py  semantic_schema.py
dot_doom.d/org-db-v3/python/org_db_server/services/: __init__.py  chunking.py  clip_service.py  database.py  document_converter.py  embeddings.py  reranker.py
dot_doom.d/org-db-v3/python/org_db_server/templates/: homepage.html
dot_doom.d/org-db-v3/python/scripts/: README.md
dot_doom.d/org-db-v3/python/scripts/benchmarks/: benchmark_search.py  benchmark_semantic_search.py
dot_doom.d/org-db-v3/python/scripts/migrations/: implement_file_level_embeddings.py  migrate_to_f32_blob.py  optimize_database.py
dot_doom.d/org-db-v3/python/scripts/profiling/: debug_search_performance.py  profile_search.py
dot_doom.d/org-db-v3/python/tests/: __init__.py  test_ann_fix.py  test_chunking.py  test_clip_service.py  test_database.py  test_database_schema.py  test_document_converter.py  test_emacs_parse.py  test_embedding_aggregation.py  test_embeddings.py  test_image_search.py  test_indexing_api.py  test_ivy_request.el  test_linked_files_api.py  test_migration.py  test_search_api.py  test_tasks_pdf.py  test_vector_search_direct.py
dot_timewarrior/: executable_timew-gj.sh  executable_timew-tags.sh  private_timewarrior.cfg  (+1 more)
(+63 files in other folders)
